# PDF_extractor

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  LICENSE  README.md  diagramas_secuencia.puml  docker-compose.yml  main.py  pyproject.toml
app/: database.py  dtos.py  exceptions.py  main.py
app/services/: pdf_extractor.py
test/: test_main.py
tests/: test_crud.py  test_exceptions.py  test_extractor.py  test_extractor_completo.py  test_main.py
